[gd_scene load_steps=6 format=3 uid="uid://b7dwsqfmdqr8"]

[ext_resource type="Script" uid="uid://r4nmfr8jfcjx" path="res://flow_field.gd" id="1_l46ob"]
[ext_resource type="PackedScene" uid="uid://bssfvyxv5uo1f" path="res://flow_node.tscn" id="2_d6vkn"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_l46ob"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_d6vkn"]
sky_material = SubResource("ProceduralSkyMaterial_l46ob")

[sub_resource type="Environment" id="Environment_apokv"]
background_mode = 2
sky = SubResource("Sky_d6vkn")
tonemap_mode = 2
glow_enabled = true

[node name="FlowField" type="Node3D"]
script = ExtResource("1_l46ob")
flow_node_scene = ExtResource("2_d6vkn")

[node name="CameraFocus" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraFocus"]
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 8.50452, 3.40739)

[node name="RayCast3D" type="RayCast3D" parent="CameraFocus/Camera3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_apokv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "generate"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "generate grid"

[node name="CalculateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "calculate"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "connect"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "mark goal"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "extrude"

[node name="Button6" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "toggle traversable"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -323.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="x" type="TextEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="y" type="TextEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="z" type="TextEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/CalculateButton" to="." method="calculate"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="VBoxContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="text_changed" from="HBoxContainer/x" to="." method="_on_x_text_changed"]
[connection signal="text_changed" from="HBoxContainer/y" to="." method="_on_y_text_changed"]
[connection signal="text_changed" from="HBoxContainer/z" to="." method="_on_z_text_changed"]
